src/test/deca/codegen/valid/printTests/testPrint.ass
; start main program
	TSTO #2
	BOV stack_overflow_error
; Main program
	ADDSP #2
; Beginning of main instructions:
	LOAD #1, R2
	STORE R2, 1(GB)
	LOAD #0x0.0p0, R2
	STORE R2, 2(GB)
	LOAD 1(GB), R2
	LOAD R2, R1
	WINT
	WSTR """ et """
	LOAD 2(GB), R2
	LOAD R2, R1
	WFLOAT
	HALT
stack_overflow_error:
	WSTR "Error: Stack Overflow"
	WNL
	ERROR
io_error:
	WSTR "Error: Input/Output error"
	WNL
	ERROR
ArithFloat_Error:
	WSTR "Error: Débordement arithmétique sur flottants"
	WNL
	ERROR
ZeroDivision_Error:
	WSTR "Error: Division entière par 0"
	WNL
	ERROR
; end main program
